add_executable(test_quic_encoding_varint test_quic_encoding_varint.cc)
target_link_libraries(test_quic_encoding_varint nexus test_base)
add_test(test_quic_encoding_varint test_quic_encoding_varint)

add_executable(test_quic_encoding_packet test_quic_encoding_packet.cc)
target_link_libraries(test_quic_encoding_packet nexus test_base)
add_test(test_quic_encoding_packet test_quic_encoding_packet)

add_executable(test_quic_encoding_frame test_quic_encoding_frame.cc)
target_link_libraries(test_quic_encoding_frame nexus test_base)
add_test(test_quic_encoding_frame test_quic_encoding_frame)

add_executable(test_quic_encoding_transport_parameters test_quic_encoding_transport_parameters.cc)
target_link_libraries(test_quic_encoding_transport_parameters nexus test_base)
add_test(test_quic_encoding_transport_parameters test_quic_encoding_transport_parameters)
